2003-11-17  Bradley Bell  <btb@icculus.org>

	* main/game.c, main/newmenu.c: always set menu mode for GL popups

2003-11-14  Bradley Bell  <btb@icculus.org>

	* main/automap.c: fix automap background image

	* main/automap.c, main/automap.h: delete cruft

	* main/automap.c: fix level number position

	* main/automap.c: simplify g3_draw_line hack

	* main/menu.c: stop pointless vid mode changes

2003-11-07  Bradley Bell  <btb@icculus.org>

	* NEWS, installation.txt: s'more documentation

2003-11-07  Steffen Pohle  <stpohle@gmx.net>

	* configure.ac: fix .exe extension problems

2003-11-07  Bradley Bell  <btb@icculus.org>

	* arch/ogl/ogl.c: disable texture format verification for OS X -
	Textures work fine!

2003-11-06  Bradley Bell  <btb@icculus.org>

	* main/automap.c, main/gamecntl.c, main/movie.c, main/titles.c:
	use more traditional Alt+Enter for toggling fullscreen

	* 2d/ibitblt.c, main/mission.h: comments/formatting

	* arch/ogl/sdlgl.c: smash textures, for non-linux, for real

2003-11-06  Bradley Bell  <btb@icculus.org>

	* arch/ogl/gr.c, arch/ogl/sdlgl.c: smash textures on every
	resolution change, use kludge to avoid repetitive res changes

2003-11-04  Bradley Bell  <btb@icculus.org>

	* main/piggy.c, main/piggy.h: moved bitmap and sound header data
	structures and i/o routines back to piggy.c

2003-11-04  Martin Schaffner <maschaffner@gmx.ch>

	* installation.txt: tell to install d1 .pig for better textures

2003-11-04  Bradley Bell  <btb@icculus.org>

	* main/mission.c, main/mission.h, main/piggy.h: added hogsize for
	oem d1 v1.0 and registered d2 v1.0, comments

2003-11-03  Bradley Bell  <btb@icculus.org>

	* main/bm.h, main/piggy.c, main/piggy.h: big pigsize is same for
	all d1 shareware - even though files are different!

	* main/bm.h, main/piggy.c, main/piggy.h: added big pigsize for
	shareware d1 v1.4

	* main/bm.h, main/piggy.c, main/piggy.h: added big pigsize for
	registered d1 v1.0

	* main/bm.h, main/piggy.c, main/piggy.h: added pigsize for